# credparser

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  configure_credparser.py  make_credentials.py  pyproject.toml
credparser/: __init__.py  __main__.py  config.py  credparser.py  errors.py  guide.py  mutators.py  seed.py
tests/: dot_config_test_good  dot_config_test_min_hash  dot_config_test_minmax_hash  dot_config_test_salt  test_credparser.py
