[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credparser"
version = "1.2.0"
description = "Light-weight credential embedding solution for scripting environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Utilities",
]
keywords = ["credentials", "obfuscation", "security", "automation"]

[project.urls]
Repository = "https://github.com/naparse/credparser"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
credparser-make = "credparser.guide:make_credentials"
credparser-config = "credparser.guide:configure_credparser_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["credparser*"]
exclude = ["tests*"]
